basics of jQuery

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <script src="jQuery.js"></script>
     </head>
     <body>
-        <div class="container">
+        <div class="container" id="greetings">
             <div class="row">
                 <div class="col-md-4">
-                    Hello, World
+                    Hello
                 </div>
             </div>
         </div>
