--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Enter short description about the website">
-        <meta name="keywords" content="enter some relative keywords">
-        <title>BootStrap Template App</title>
+        <meta name="description" content="Details about the Ghori family which traces generations">
+        <meta name="keywords" content="family tree">
+        <title>The Ghori Family Tree</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <script src="https://d3js.org/d3.v6.min.js"></script>
+        <script src="https://d3js.org/d3.v5.min.js"></script>
+        <script src="https://d3js.org/d3-selection.v1.min.js"></script>
         <script src="jQuery.js"></script>
     </head>
     <body>
@@ -22,6 +23,7 @@
         <svg width="400" height="400">
             <circle />
         </svg>
+    
     
         <script src="script.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
